--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_it: ^9.2.0
   path_provider: ^2.1.5
   dropdown_button2: ^2.3.9
+  waterfall_flow: ^3.1.1
 
 dev_dependencies:
   flutter_test:
