--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   path_provider: ^2.1.5
   dropdown_button2: ^2.3.9
   waterfall_flow: ^3.1.1
+  bloc_test: ^10.0.0
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
